k8s/monitoring/loki-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: prod
  labels:
    app: loki
    component: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 0
      containers:
        - name: loki
          image: grafana/loki:latest
          imagePullPolicy: IfNotPresent
          args:
            - '-config.file=/etc/loki/loki-config.yml'
          ports:
            - containerPort: 3100
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.1"
            limits:
              memory: "512Mi"
              cpu: "0.5"
          volumeMounts:
            - name: config
              mountPath: /etc/loki
              readOnly: true
            - name: data
              mountPath: /loki
            - name: var-loki
              mountPath: /var/loki
      volumes:
        - name: config
          configMap:
            name: loki-config
        - name: data
          persistentVolumeClaim:
            claimName: loki-pvc
        - name: var-loki
          emptyDir: {}
