k8s/monitoring/promtail-daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: prod
  labels:
    app: promtail
    component: monitoring
spec:
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      containers:
        - name: promtail
          image: grafana/promtail:latest
          imagePullPolicy: IfNotPresent
          args:
            - '-config.file=/etc/promtail/promtail-config.yml'
          ports:
            - containerPort: 9080
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "0.05"
            limits:
              memory: "256Mi"
              cpu: "0.2"
          volumeMounts:
            - name: config
              mountPath: /etc/promtail
              readOnly: true
            - name: varlog
              mountPath: /var/log
              readOnly: true
            - name: docker-containers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: docker-sock
              mountPath: /var/run/docker.sock
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: promtail-config
        - name: varlog
          hostPath:
            path: /var/log
        - name: docker-containers
          hostPath:
            path: /var/lib/docker/containers
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
      terminationGracePeriodSeconds: 30
