k8s/monitoring/grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: prod
  labels:
    app: grafana
    component: monitoring
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
