k8s/monitoring/loki-service.yml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: prod
  labels:
    app: loki
    component: monitoring
spec:
  type: ClusterIP
  selector:
    app: loki
  ports:
    - port: 3100
      targetPort: 3100
