k8s/monitoring/prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prod
  labels:
    app: prometheus
    component: monitoring
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
